[gd_scene load_steps=2 format=3 uid="uid://drxnpvj2ae11d"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_imqsc"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.011
offset_right = -1.0
offset_bottom = 0.019989
script = ExtResource("1_imqsc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
